--- a/test1.html
+++ b/test1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github Lab</title>
+    <title>Github Labs</title>
   </head>
   <body></body>
 </html>
